[gd_scene load_steps=9 format=3 uid="uid://duyqre1mctfiw"]

[ext_resource type="Script" uid="uid://cj0ttnjcqegr0" path="res://Scripts/diary_room.gd" id="1_do0ic"]
[ext_resource type="PackedScene" uid="uid://b2av1rg127swk" path="res://Scenes/Player.tscn" id="2_54exe"]
[ext_resource type="PackedScene" uid="uid://xmlw8ttwja26" path="res://Scenes/door.tscn" id="3_b40ni"]
[ext_resource type="Script" uid="uid://dqs4tdxcbskfc" path="res://Scripts/diary_trigger.gd" id="4_54exe"]
[ext_resource type="PackedScene" uid="uid://b4mrcrmbpqb10" path="res://Scenes/diary_table.tscn" id="6_do0ic"]
[ext_resource type="Texture2D" uid="uid://bap21533sx6cy" path="res://Assets/room1.png" id="6_iiihc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k73gw"]
size = Vector2(28, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b40ni"]
size = Vector2(55, 14)

[node name="diaryRoom" type="Node2D"]
script = ExtResource("1_do0ic")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="Player" parent="." instance=ExtResource("2_54exe")]
position = Vector2(-7, 105)
scale = Vector2(0.2, 0.2)
collision_layer = 3
collision_mask = 3

[node name="Door" parent="." instance=ExtResource("3_b40ni")]
position = Vector2(-13, 148)
sceneToChange = "res://Scenes/centro.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(4, 7.5)
rotation = -3.14159
shape = SubResource("RectangleShape2D_k73gw")
one_way_collision = true

[node name="DiaryTrigger" type="Area2D" parent="."]
position = Vector2(-84, -32)
collision_layer = 3
collision_mask = 3
script = ExtResource("4_54exe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiaryTrigger"]
light_mask = 3
visibility_layer = 3
position = Vector2(80.5, 24)
shape = SubResource("RectangleShape2D_b40ni")

[node name="Label" type="Label" parent="DiaryTrigger"]
visible = false
offset_left = 98.0
offset_top = -50.0
offset_right = 288.0
offset_bottom = -33.0
theme_override_font_sizes/font_size = 12
text = "Pulsa espacio para abrir el diario"

[node name="Mesa" type="Node2D" parent="."]

[node name="DiaryTable" parent="." instance=ExtResource("6_do0ic")]
light_mask = 3
visibility_layer = 3
position = Vector2(-3, 16)
scale = Vector2(0.07, 0.07)

[node name="background" type="Area2D" parent="."]
z_index = -1

[node name="Sprite2D" type="Sprite2D" parent="background"]
position = Vector2(-2, 7.24999)
scale = Vector2(0.273148, 0.26821)
texture = ExtResource("6_iiihc")

[connection signal="body_entered" from="DiaryTrigger" to="DiaryTrigger" method="_on_body_entered"]
[connection signal="body_exited" from="DiaryTrigger" to="DiaryTrigger" method="_on_body_exited"]
